# ichibei_rs

./: .dockerignore  Cargo.toml  Dockerfile  flake.nix  fly.toml
configuration/: base.toml  base.yaml  local.toml  production.toml
src/: configuration.rs  main.rs  startup.rs
tests/: health_check.rs
