[package]
name = "ichibei_rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ichibei_rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.40"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde-aux = "4"
serde_json = "1"
serde = "1"
oauth2 = "4.4.2"
jsonwebtoken = "9.3.0"

[dev-dependencies]
reqwest = "0.12"
once_cell = "1.7.2"
